--- a/Lab2/style.css
+++ b/Lab2/style.css
@@ -1,4 +1,152 @@
-p{
-    color:blueviolet;   
-
+*{
+    box-sizing: border-box;
 }
+
+p{
+    color:rgb(50, 30, 71);  
+    font-size: large; 
+    font-family: sans-serif;
+}
+
+
+h2{
+    color:rgb(0, 122, 112);  
+    font-size: x-large;
+    font-family: sans-serif;
+}
+
+dd{
+    color:rgb(98, 83, 110);
+    font-size: medium;
+    font-family: sans-serif;  
+    
+}
+
+a{
+    color: steelblue;  
+}
+
+header{
+    font-size: 30px;
+    font-family: sans-serif;
+    color: rgb(149, 163, 224);
+    text-shadow: 2px 0 0 #3e50a0, -2px 0 0 #3e50a0, 0 2px 0 #3e50a0, 0 -2px 0 #3e50a0, 1px 1px #3e50a0, -1px -1px 0 #3e50a0, 1px -1px 0 #3e50a0, -1px 1px 0 #3e50a0;;
+}
+nav{
+    font-family: sans-serif;
+    line-height: 30px;
+    display: block;
+    padding: 5px;
+    background-color: rgb(228, 198, 197);
+    border-width: 100px;
+    font-size: 20px;
+    border: 60px; 
+    border: 5px dotted rgb(175, 97, 123);   
+}
+
+main{
+    background-color: rgb(234, 250, 164); 
+    border: 5px dotted rgb(226, 236, 79);  
+}
+
+footer{
+    font-size: x-large;
+    text-align: center;
+    font-family: sans-serif;
+    font-weight: bold;    
+}
+
+address{
+    display: block;
+    text-align: center;
+    margin-top: 30px;
+}
+
+li{
+    display: inline-block;
+    padding-right: 20px;
+    padding-bottom: 30px;
+    color:rgb(98, 83, 110);
+    font-size: large;
+    font-family: sans-serif; 
+    font-weight: bold;
+}
+
+#p1{
+    color:rgb(58, 1, 32);
+    font-size: large;
+}
+
+#head{
+    text-align: center;
+}
+
+#About{
+    display: block;
+    margin: 0 1.5%;
+    width: 65%;
+    margin-top: 10px;
+    padding-top: 5px;
+}
+
+#Cat{
+    float: right;
+    margin: 0 1.5%;
+    margin-top: 22px;
+    width: 30%;   
+    padding-bottom: 15px;
+    padding-right: 15px;
+    padding-top: 15px;
+    
+}
+
+#cattext{
+    font-family: cursive;
+    text-align: center;
+}
+
+#EdExp{
+    background-color: rgb(205, 162, 247);
+    float: left;
+    margin: 0 1.5%;
+    width: 30%;
+    padding: 10px;
+    margin-bottom: 30px;
+    border: 5px dotted rgb(52, 22, 71);   
+}
+
+
+#AddPrep{
+    background-color: rgb(168, 167, 240);
+    float: left;
+    margin: 0 1.5%;
+    width: 30%;
+    padding: 10px;
+    padding-bottom: 60px;
+    border: 5px dotted rgb(17, 32, 73);   
+}
+
+#Languages{
+    display: block;
+    margin: 0 1.5%;
+    width: 30%;
+    padding-left: 25px;
+}
+
+#bottom{
+    padding-top: 20px;
+    padding-bottom: 20px;
+    background-image: url("fine.jpg");
+    background-size: 250px 200px;
+    background-repeat: repeat-x;  
+    background-blend-mode: color-dodge;  
+    
+}
+
+#foot{
+    color:rgb(0, 255, 0);
+    text-shadow: 2px 0 0 #000000, -2px 0 0 #000000, 0 2px 0 #000000, 0 -2px 0 #000000, 1px 1px #000000, -1px -1px 0 #000000, 1px -1px 0 #000000, -1px 1px 0 #000000;;
+}
+
+
+
