--- a/Lab3/index.css
+++ b/Lab3/index.css
@@ -56,9 +56,51 @@ body {
 @media (min-width: 768px) and (max-width: 1024px) {
   header{
     display: flex;
-    flex-wrap: nowrap;
-    justify-content: space-around;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-right: 100px;
   }
+
+  nav{
+    background-color: gray;
+    margin-bottom: 12px;
+  }
+
+  .hamburger{
+    display: flex;
+    justify-content: flex-end;
+    color: white;
+  }
+
+  .menu{
+    /* The menu (bullets) is not shown in this mediw view*/
+    display: none;
+  }
+
+  .product{
+    text-align: center;
+    border: 1px solid gray;
+    border-radius: 5px;
+    width: 80%;
+    margin-left: 10%;
+    margin-top: 5px;
+  }
+
+  p{
+    text-align: left;
+    margin-left: 7px;
+  }
+
+  .social{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-top: 5px;
+    padding: 15px;
+    list-style: none;
+    border-top: 3px solid rgb(196, 196, 196);
+  }
+
 }
 
 @media (min-width: 1025px) {
